# Trustty-Reporter-FrontEnd

./: .gitignore  Dockerfile  README.md  check_redis.py  pyproject.toml  requirements.txt  requirements2.txt  run.py  test_api.py
app/: __init__.py  config.py  config_v0.py  models.py
app/auth/: __init__.py  routes.py  utils.py
app/auth/templates/: index.html  layout.html  resetPasswordRequest.html  reset_password.html  resetpassword.html  signin.html  signup.html
app/auth/templates/email/: reset_password.html  reset_password.txt
app/dashboard/: __init__.py  routes.py  utils.py
app/dashboard/static/css/: profile.css  report-inputs.css
app/dashboard/static/js/: profile.js  report-inputs.js
app/dashboard/templates/: profile.html  report-edit.html  report-edits.html  report-inputs.html  report-results.html  results.html
app/dashboard_v2/: __init__.py  lemonsqueezy_utils.py  routes.py  utils.py
app/dashboard_v2/static/js/: report-inputs.js  report-table.js
app/dashboard_v2/templates/: dashboard_v2-edit.html  dashboard_v2-home-new.html  dashboard_v2-home.html  dashboard_v2-input.html  dashboard_v2-layout.html  dashboard_v2-logs.html  download_buttons.jinja
app/reportChat/: __init__.py  routes.py
app/reportChat/templates/: comingsoon.html
app/static/css/: error.css  landing.css
app/static/js/: landing.js
app/templates/: FreedomIndexReport.html  GooglePlayStoreReport.html  SalesReport.html  cookie_policy.html  error.html  landing.html  layout_main.html  privacy_policy.html  terms_and_conditions.html
