[tool.poetry]
name = "Reporting-Tool-Frontend"
version = "0.1.0"
description = "Your project description"
authors = ["Saurabh Lal <saurabh.lal@trusttyreporter.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
authlib = "^1.0.0"
requests = "^2.31.0"
bcrypt = "^4.1.3"
psycopg2-binary = "^2.9.9"
Jinja2 = "^3.1.4"
Werkzeug = "^3.0.3"
pandas = "^2.2.2"
chardet = "^5.2.0"
langchain = "*"
langserve = "*"
fastapi = "*"
"Flask-Ext" = "*"
"flask[async]" = "*"
flask-session = "*"
redis = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"